Refactored all person to event for Commands